--- a/PythonReview.ipynb
+++ b/PythonReview.ipynb
@@ -43,7 +43,9 @@
     "\n",
     "print(True and False)\n",
     "\n",
-    "print(not(True and False))\n"
+    "print(not(True and False))\n",
+    "\n",
+    "#this is a test for change"
    ]
   },
   {
@@ -1084,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
