--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -1,6 +1,63 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This pogram will be used to practice loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Type a word Word\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W\n",
+      "o\n",
+      "r\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print all letters in word \n",
+    "word = input(\"Type a word\")\n",
+    "\n",
+    "for letter in word:\n",
+    "    print(letter)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
