--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -9,20 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Type a word Word\n"
+      "Type a word please:  Word\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "W\n",
       "o\n",
       "r\n",
@@ -32,7 +33,9 @@
    ],
    "source": [
     "#print all letters in word \n",
-    "word = input(\"Type a word\")\n",
+    "word = input(\"Type a word please: \")\n",
+    "\n",
+    "print('')\n",
     "\n",
     "for letter in word:\n",
     "    print(letter)"
